--- a/account/templates/changepwd.htm
+++ b/account/templates/changepwd.htm
@@ -1,19 +1,17 @@
 {% extends "shop.base.htm" %}
 
 {% block section %}
-        <div id="left">
-            <ul id="lm">
-                <li><a href="{% url 'account:myOrd' %}">我的订单</a></li>
-                <li><a href="{% url 'account:settings' %}">个人信息</a></li>
-                <li><a href="{% url 'account:changepwd' %}" class="on">修改密码</a></li>
-            </ul>
-        </div>
-        <div id="right">
+        <menu>
+            <li><a href="{% url 'account:myOrd' %}">我的订单</a></li>
+            <li><a href="{% url 'account:settings' %}">个人信息</a></li>
+            <li><a href="{% url 'account:changepwd' %}" class="on">修改密码</a></li>
+        </menu>
+        <section>
             <form action="{% url 'account:cPwd' %}" method="post">
-                {% csrf_token %}
-                <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
+                <table>
                     <tr>
-                        <td colspan="2">修改密码</td>
+                        <td>修改密码</td>
+                        <td>&nbsp;</td>
                     </tr>
 {% for i in frm %}
                     <tr>
@@ -24,10 +22,11 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
+                            {% csrf_token %}
                             <input type="submit" value="修改" class="btn btnbr"/>
                         </td>
                     </tr>
                 </table>
             </form>
-        </div>
+        </section>
 {% endblock %}
