--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -2,10 +2,10 @@
 
 {% block section %}
 <form name="toCart" method="post" action="{% url 'cart:cart' %}">
-    <table width="100%" class="mtb25 tdptd5">
+    <table width="100%">
         <tr>
             <th>商品名称</th>
-            <th width="20%">商品规格</th>
+            <th width="20%">规格</th>
             <th width="10%">价格</th>
             <th width="53px">数量</th>
             <th width="10%">小计</th>
@@ -25,7 +25,7 @@
         </tr>
 {% endfor %}
         <tr class="bline">
-            <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.total|floatformat:2 }}</span> 元</span></td>
+            <td align="right" colspan="5"><b class="font15">商品总价: ￥<span class="total">{{ cart.total|floatformat:2 }}</span> 元</b></td>
             <td></td>
         </tr>
 {% else %}
@@ -42,7 +42,7 @@
             </td>
         </tr>
     </table>
-    <table width="100%" class="mtb25 tdptd5">
+    <table width="100%" class="mtb2">
         <tr>
             <td>是否购买生日套装（生日牌/蜡烛）？</td>
             <td>3元/套</td>
@@ -55,15 +55,18 @@
         </tr>
     </table>
 </form>
-<h3>小提示：</h3>
+<strong>小提示：</strong>
 <p>蓝圈内为免费配送范围，超出免费配送范围须加收10元，收费配送范围为红圈以内蓝圈以外。</p>
 <p>&nbsp;</p>
-<p><img src="{{ STATIC_URL }}images/delivery_areas.jpg" /></p>
-<p class="clear">&nbsp;</p>
+<img src="{{ STATIC_URL }}images/delivery_areas.jpg" />
 <p>&nbsp;</p>
 <p>蛋糕规格及免费配送餐具：</p>
-<table class="ml40">
-    <tr><th>规格</th><th>适用人数(人)</th><th>免费赠送(套)</th></tr>
+<table width="100%">
+    <tr>
+        <th>规格</th>
+        <th>适用人数(人)</th>
+        <th>免费赠送(套)</th>
+    </tr>
     <tr align="center">
         <td>1.0磅</td>
         <td>2-3</td>
@@ -75,7 +78,7 @@
         <td>6</td>
     </tr>
     <tr align="center">
-        <td>2.5</td>
+        <td>2.5磅</td>
         <td>8-9人</td>
         <td>10</td>
     </tr>
@@ -90,7 +93,7 @@
         <td>25</td>
     </tr>
     <tr align="center">
-        <td>10磅</td>
+        <td>10.0磅</td>
         <td>35-40</td>
         <td>40</td>
     </tr>
