--- a/order/templates/queryord.htm
+++ b/order/templates/queryord.htm
@@ -1,30 +1,26 @@
 {% extends "shop.base.htm" %}
 
 {% block section %}
-                <div id="right">
-                    <div id="show">
-                        <div id="m_i">
-                            <span id="result"></span>
-                            <form action="" method="post">
-                                <table width="670" cellpadding="0" cellspacing="0" class="tdptd5">
-                                    <tr>
-                                        <td colspan="2">输入订单号查询订单状态</td>
-                                    </tr>
-                                    <tr>
-                                        <td align="right">订单号：</td>
-                                        <td><input type="text" id="onum" name="onum" class="input" /></td>
-                                    </tr>
-                                    <tr>
-                                        <td>&nbsp;</td>
-                                        <td>
-                                            <input type="button" value="查询" class="btn btnbr" onClick="return chekq(this)" />
-                                            <input type="hidden" name="action" value="query" />
-                                            <input type="hidden" name="class" value="22" />
-                                        </td>
-                                    </tr>
-                                </table>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+    <section>
+        <form action="" method="post">
+            <table>
+                <tr>
+                    <td>输入订单号查询订单状态</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td align="right">订单号：</td>
+                    <td><input type="text" id="onum" name="onum" class="input" /></td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>
+                        <input type="button" value="查询" class="btn btnbr" onClick="return chekq(this)" />
+                        <input type="hidden" name="action" value="query" />
+                        <input type="hidden" name="class" value="22" />
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </section>
 {% endblock %}
