--- a/account/templates/vieword.htm
+++ b/account/templates/vieword.htm
@@ -1,16 +1,14 @@
 {% extends "shop.base.htm" %}
 
 {% block section %}
-        <div id="left">
-            <ul id="lm">
-                <li><a href="{% url 'account:myOrd' %}" class="on">我的订单</a></li>
-                <li><a href="{% url 'account:settings' %}">个人信息</a></li>
-                <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
-            </ul>
-        </div>
-        <div id="right">
+        <menu>
+            <li><a href="{% url 'account:myOrd' %}" class="on">我的订单</a></li>
+            <li><a href="{% url 'account:settings' %}">个人信息</a></li>
+            <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
+        </menu>
+        <section>
             <h3 class="mt5">订单状态</h3>
-            <table width="100%" class="mb10 ml5">
+            <table width="100%" class="mb2">
                 <tr>
                     <td width="100px">订单号：</td>
                     <td>{{ o.sn }}</td>
@@ -29,7 +27,7 @@
                 </tr>
             </table>
             <h3 class="mb10">商品列表</h3>
-            <table width="100%" class="mb10 ml5">
+            <table width="100%" class="mb2">
                 <tr>
                     <th>商品名称</th>
                     <th>规格</th>
@@ -56,7 +54,7 @@
                 </tr>
             </table>
             <h3>收货人信息</h3>
-            <table width="100%" class="mb10 ml5">
+            <table width="100%" class="mb2">
                 <tr>
                     <td width="100px">收货人姓名：</td>
                     <td>{{ o.logcs.consignee }}</td>
@@ -79,5 +77,5 @@
                 </tr>
             </table>
             <center><a href="{% url 'account:myOrd' %}" class="btn btnbr">返回</a></center>
-        </div>
+        </section>
 {% endblock %}
