--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -1,19 +1,4 @@
 /* CSS Document */
-
-*article,
-*aside,
-*details,
-*figcaption,
-*figure,
-*footer,
-*header,
-*hgroup,
-*menu,
-*nav,
-*section {
-    display: block;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -46,8 +31,6 @@ ul, ol, dl, menu {
 img {
     border: none;
     vertical-align:text-bottom;
-    width: 100%;
-    height: 100%;
 }
 
 table {
@@ -63,13 +46,6 @@ table tr td {
 input[type=text], input[type=password], textarea {
     height: 1.425em;
     padding: 0.1875em 0.45em;
-    border: 0.1em solid #CDCDCD;
-    border-radius: 0.125em;
-    background: #FFF;
-}
-*input {
-    height: 16px;
-    padding: 3px;
     border: 0.1em solid #CDCDCD;
     border-radius: 0.125em;
     background: #FFF;
@@ -220,6 +196,23 @@ body {
         }
     }
 
+    .messagelist {
+        padding-bottom: 1em;
+        li {
+            font-size: 0.75em;
+            padding: 0.25em 0.25em 0.25em 2em;
+            margin-bottom: 0.25em;
+            background: url(/static/images/icon_success.gif) 5px .3em no-repeat;
+            border-bottom: 0.1em solid #E5E5E5;
+            &.warning {
+                background-image: url(/static/images/icon_alert.gif);
+            }
+            &.error {
+                background-image: url(/static/images/icon_error.gif);
+            }
+        }
+    }
+
     &>header {
         width: 100%;
         display: inline-block;
@@ -287,23 +280,6 @@ body {
         }
     }
 
-    .messagelist {
-        padding-bottom: 1em;
-        li {
-            font-size: 0.75em;
-            padding: 0.25em 0.25em 0.25em 2em;
-            margin-bottom: 0.25em;
-            background: url(/static/images/icon_success.gif) 5px .3em no-repeat;
-            border-bottom: 0.1em solid #E5E5E5;
-            &.warning {
-                background-image: url(/static/images/icon_alert.gif);
-            }
-            &.error {
-                background-image: url(/static/images/icon_error.gif);
-            }
-        }
-    }
-
     &>section {
         height:auto !important;
         height: 200px;
@@ -318,6 +294,11 @@ body {
             padding-bottom: 0.25em;
         }
 
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
         ol#pinBox {
             width: 100%;
             float: left;
@@ -327,28 +308,13 @@ body {
                 float: left;
                 margin-bottom: 1em;
 
-                @media screen and (max-width: 629px) {
+                @media screen and (max-width: 819px) {
                     .styp{
                         width: 100%;
                         margin-bottom: 0.375em;
                     }
                     .side{
                         float: left;
-                    }
-                }
-                @media screen and (min-width: 630px) and (max-width: 819px) {
-                    .styp{
-                        width: 37.5em;
-                        float: left;
-                        margin-bottom: 0.375em;
-                        margin-left: auto;
-                        margin-right: auto;
-                    }
-                    .side{
-                        width: 36.375em;
-                        float: left;
-                        margin-left: auto;
-                        margin-right: auto;
                     }
                 }
                 @media screen and (min-width: 820px) and (max-width: 985px) {
@@ -480,7 +446,330 @@ body {
                 line-height: 2em;
             }
         }
+    }
+}
+
+/**body {
+    color: #4b3c37;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #FFF;
+
+    article,
+    aside,
+    details,
+    figcaption,
+    figure,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    section {
+        display: block;
+    }
+
+    input {
+        height: 16px;
+        padding: 3px;
+        border: 0.1em solid #CDCDCD;
+        border-radius: 0.125em;
+        background: #FFF;
+    }
+
+    @media screen and (max-width: 479px) {
+        margin: 0.625em;
+        header {
+            menu {
+                width: 100%;
+                padding-bottom: 0.5em;
+            }
+            aside {
+                width: 100%;
+                float: left;
+            }
+        }
+        #mn a{
+            width: 10%;
+        }
+    }
+
+    @media screen and (min-width: 480px) and (max-width: 909px) {
+        margin: 0.625em;
+        header {
+            aside {
+                float: right;
+                margin: 4.5em 1em 0 0;
+                clear: right;
+            }
+        }
+        #mn a{
+            width: 5em;
+        }
+    }
+
+
+    @media screen and (min-width: 910px){
+        width: 55.375em;
+        margin: 0.625em auto;
+        header {
+            aside {
+                float: right;
+                margin: 4.5em 1em 0 0;
+                clear: right;
+            }
+        }
+        #mn a {
+            width: 6em;
+        }
 
     }
 
-}
+    .messagelist {
+        padding-bottom: 1em;
+        li {
+            font-size: 0.75em;
+            padding: 0.25em 0.25em 0.25em 2em;
+            margin-bottom: 0.25em;
+            background: url(/static/images/icon_success.gif) 5px .3em no-repeat;
+            border-bottom: 0.1em solid #E5E5E5;
+            &.warning {
+                background-image: url(/static/images/icon_alert.gif);
+            }
+            &.error {
+                background-image: url(/static/images/icon_error.gif);
+            }
+        }
+    }
+
+    #mh {
+        width: 100%;
+        display: inline-block;
+        menu {
+            float: right;
+            li {
+                float: left;
+                margin: 0 0.4em;
+            }
+        }
+        a {
+            &#logo {
+                float: left;
+                border: none;
+            }
+        }
+
+        aside {
+            small {
+                position: relative;
+                top: 1em;
+                left: 10.5em;
+            }
+            em {
+                display: block;
+                font-size: 1.875em;
+                font-family: 'constantia';
+                font-weight: bold;
+                white-space: nowrap;
+            }
+        }
+
+    }
+
+    #mn {
+        width: 100%;
+        display: inline-block;
+        background: url(/static/shop/images/menu.jpg) bottom repeat-x;
+        margin: 0.75em 0 1.5em 0;
+        line-height: 0.5;
+
+        a {
+            float: left;
+            background: url(/static/shop/images/menu_no.jpg) no-repeat;
+            color: #cf9764;
+            height: 2.5em;
+            padding-left: 1.6em;
+            line-height: 1.6;
+            &:hover {
+                border: none !important;
+                background: url(/static/shop/images/menu_on.jpg) no-repeat;
+            }
+        }
+
+    }
+
+    #mf {
+        width: 100%;
+        display: inline-block;
+        address {
+            float: left;
+        }
+        em {
+            float: right;
+        }
+    }
+
+    #ms {
+        height:auto !important;
+        height: 200px;
+        width: 100%;
+        display: inline-block;
+        min-height: 30em;
+        padding-bottom: 2em;
+        font-size: 0.75em;
+
+        p {
+            text-indent: 2em;
+            padding-bottom: 0.25em;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        ol#pinBox {
+            width: 100%;
+            float: left;
+
+            .item {
+                width: 100%;
+                float: left;
+                margin-bottom: 1em;
+
+                @media screen and (max-width: 819px) {
+                    .styp{
+                        width: 100%;
+                        margin-bottom: 0.375em;
+                    }
+                    .side{
+                        float: left;
+                    }
+                }
+                @media screen and (min-width: 820px) and (max-width: 985px) {
+                    .styp{
+                        float: left;
+                        width: 37.5em;
+                    }
+                    .side{
+                        float: right;
+                        width: 21%;
+                    }
+                }
+                @media screen and (min-width: 886px) and (max-width: 909px) {
+                    .styp{
+                        float: left;
+                        width: 37.5em;
+                    }
+                    .side{
+                        float: right;
+                        width: 27%;
+                    }
+                }
+                @media screen and (min-width: 910px){
+                    .styp{
+                        float: left;
+                        width: 37.5em;
+                    }
+                    .side{
+                        float: right;
+                        width: 29.5%;
+                    }
+                }
+
+                .styp {
+                    height: 28.125em;
+                }
+
+                .side {
+                    background: #FFFFFF;
+                    padding: 0.5em;
+                    border-radius: 0.25em;
+                    border: 0.1em solid #cc9866;
+                    h2 {
+                        padding-bottom: 0.25em;
+                        a {
+                            color: #cf9764;
+                        }
+                    }
+                    p {
+                        width: 100%;
+                        color: #999;
+                    }
+                    .pinInfo {
+                        float: left;
+                        color: #999;
+                        width: 100%;
+                        padding: 0.5em 0;
+                        display: block;
+                        div {
+                            background: url(/static/images/photoDes.png) no-repeat;
+                            padding-left: 2em;
+                            margin-bottom: 0.5em;
+                            line-height: 1.5em;
+                            font-size: 0.75em;
+                        }
+                        .sales {
+                            background-position: 0 -113px;
+                        }
+                        .like {
+                            background-position: 0 -142px
+                        }
+                    }
+
+                    nav {
+                        width: 100%;
+                        float: left;
+                        line-height: 1.8;
+                        text-decoration: none;
+                        a {
+
+                            margin: 0 0.3125em;
+                        }
+                    }
+                    .button {
+                        width: 100%;
+                        float: left;
+                        position: relative;
+                        left: 0;
+                        bottom: 0;
+                        margin-top: 1.5em;
+                         a {
+                            margin: 0.5em;
+                        }
+                    }
+
+
+                }
+            }
+        }
+        #bner {
+            width: 100%;
+            height: 530px;
+            padding-bottom: 20px;
+            float: left;
+        }
+        menu {
+            width: 20%;
+            float: left;
+            font-size: 0.875em;
+            padding-bottom: 2em;
+            li {
+                padding: 0 2em 0 0.5em;
+                a {
+                    line-height: 2;
+                }
+            }
+        }
+        section, article {
+            width: 80%;
+            float: right;
+        }
+        section {
+        }
+        article {
+            h3 {
+                text-indent: 1.7em;
+                line-height: 2em;
+            }
+        }
+    }
+}*/
