--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -7,16 +7,16 @@
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
-<!--[if lt IE 9]>
+<!--[if lt IE 8]>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}shop/css/css.css" />
 <![endif]-->
-<!--[if !IE]><!-->
+<!--[if gte IE 9]><!-->
     <link rel="stylesheet/less" href="{{ STATIC_URL }}shop/css/css.less" />
 <!--<![endif]-->
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.debug.css" />
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
-<!--[if lt IE 9]>
+<!--[if IE]>
     <script type="text/javascript" src="{{ STATIC_URL }}js/css3-mediaqueries.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/es5-shim.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
