修正  - 修正少许前台前端效果
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/order/templates/queryord.htm
+++ b/order/templates/queryord.htm
@@ -1,7 +1,7 @@
 {% extends "shop.base.htm" %}
 
 {% block section %}
-    <section>
+    <center>
         <form action="" method="post">
             <table>
                 <tr>
@@ -22,5 +22,5 @@
                 </tr>
             </table>
         </form>
-    </section>
+    </center>
 {% endblock %}
