--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -2,8 +2,8 @@
 
 {% block section %}
         <section>
-            <form action="{% url 'account:login' %}" method="POST" class="fl">
-            <table cellpadding="0" cellspacing="0" width="335">
+            <form action="{% url 'account:login' %}" method="POST">
+            <table>
                 <tr>
                     <td colspan="2">用户登录</td>
                 </tr>
@@ -27,9 +27,9 @@
                 </tr>
             </table>
             </form>
-            <form action="{% url 'account:quicklyREG' %}" method="POST" onSubmit="return chekreg(this)" class="fl">
+            <form action="{% url 'account:quicklyREG' %}" method="POST" onSubmit="return chekreg(this)">
             {% csrf_token %}
-            <table cellpadding="0" cellspacing="0" width="335">
+            <table>
                 <tr>
                     <td colspan="2">用户注册</td>
                 </tr>
