--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -161,9 +161,6 @@ body {
                 float: left;
             }
         }
-        &>nav a {
-            width: 10%;
-        }
     }
 
     @media screen and (min-width: 480px) and (max-width: 909px) {
@@ -174,9 +171,6 @@ body {
                 margin: 4.5em 1em 0 0;
                 clear: right;
             }
-        }
-        &>nav a {
-            width: 5em;
         }
     }
 
@@ -190,9 +184,6 @@ body {
                 margin: 4.5em 1em 0 0;
                 clear: right;
             }
-        }
-        &>nav a {
-            width: 6em;
         }
     }
 
@@ -260,10 +251,31 @@ body {
             color: #cf9764;
             height: 2.5em;
             padding-left: 1.6em;
+            padding-right: 0.5em;
             line-height: 1.6;
             &:hover {
                 border: none !important;
                 background: url(/static/shop/images/menu_on.jpg) no-repeat;
+            }
+        }
+
+
+        @media screen and (min-width: 319px) and (max-width: 479px) {
+            a {
+                width: 10%;
+            }
+        }
+
+        @media screen and (min-width: 480px) and (max-width: 909px) {
+            a {
+                width: 5em;
+            }
+        }
+
+
+        @media screen and (min-width: 910px){
+            a {
+                width: 6em;
             }
         }
 
@@ -388,6 +400,7 @@ body {
                             background: url(/static/images/photoDes.png) no-repeat;
                             padding-left: 2em;
                             margin-bottom: 0.5em;
+                            margin-left: 0.5em;
                             line-height: 1.5em;
                             font-size: 0.75em;
                         }
@@ -440,16 +453,31 @@ body {
             }
         }
         &>section, &>article {
-            width: 85%;
-            float: right;
+            @media screen and (max-width: 629px) {
+                width: 100%;
+                text-align: -webkit-center;
+
+            }
+            @media screen and (min-width: 630px) {
+                width: 85%;
+                float: right;
+                form {
+                    float: left;
+                    padding: 0 2em;
+                }
+            }
         }
 
         &>section {
+
         }
         &>article {
             h3 {
-                /*text-indent: 1.7em;*/
+                text-indent: 1.7em;
                 line-height: 2em;
+            }
+            p {
+                text-indent: 2em;
             }
         }
     }
