修正  - 支付方式API[积分] 修正 无会员时bug  - admin中显示问题
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -7,9 +7,9 @@
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
-<!--[if lt IE 8]><!-->
-    <!-- <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}shop/css/css.css" /> -->
-<!--<![endif]-->
+<!--[if lt IE 8]>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}shop/css/css.css" />
+<![endif]-->
 <!--[if gte IE 9]><!-->
     <link rel="stylesheet/less" href="{{ STATIC_URL }}shop/css/css.less" />
 <!--<![endif]-->
