--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -244,7 +244,6 @@ body {
         display: inline-block;
         background: url(/static/shop/images/menu.jpg) bottom repeat-x;
         margin: 0.5rem 0 1rem 0;
-        /*line-height: 0.5;*/
 
         a {
             float: left;
@@ -482,3 +481,340 @@ body {
         }
     }
 }
+
+/*body {
+    color: #4b3c37;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #FFF;
+
+    @media screen and (max-width: 479px) {
+        margin: 0.625em;
+        #mh {
+            menu {
+                width: 100%;
+                padding-bottom: 0.5em;
+            }
+            aside {
+                width: 100%;
+                float: left;
+            }
+        }
+    }
+
+    @media screen and (min-width: 480px) and (max-width: 909px) {
+        margin: 0.625em;
+        #mh {
+            aside {
+                float: right;
+                margin: 4.3em 1em 0 0;
+                clear: right;
+            }
+        }
+    }
+
+
+    @media screen and (min-width: 910px){
+        width: 55.375em;
+        margin: 0.625em auto;
+        #mh {
+            aside {
+                float: right;
+                margin: 4.3em 1em 0 0;
+                clear: right;
+            }
+        }
+    }
+
+    .messagelist {
+        padding-bottom: 1rem;
+        li {
+            font-size: 0.75em;
+            padding: 0.25em 0.25em 0.25em 2em;
+            margin-bottom: 0.25em;
+            background: url(/static/images/icon_success.gif) 5px .3em no-repeat;
+            border-bottom: 0.1em solid #E5E5E5;
+            &.warning {
+                background-image: url(/static/images/icon_alert.gif);
+            }
+            &.error {
+                background-image: url(/static/images/icon_error.gif);
+            }
+        }
+    }
+
+    #mh {
+        width: 100%;
+        display: inline-block;
+        menu {
+            float: right;
+            li {
+                float: left;
+                margin: 0 0.4em;
+            }
+        }
+        a {
+            &#logo {
+                float: left;
+                border: none;
+            }
+        }
+
+        aside {
+            small {
+                position: relative;
+                top: 1em;
+                left: 9.5em;
+            }
+            em {
+                display: block;
+                font-size: 2em;
+                font-family: 'constantia';
+                font-weight: bold;
+                white-space: nowrap;
+            }
+        }
+
+    }
+
+    #mn {
+        width: 100%;
+        display: inline-block;
+        background: url(/static/shop/images/menu.jpg) bottom repeat-x;
+        margin: 0.5em 0 1em 0;
+
+        a {
+            float: left;
+            background: url(/static/shop/images/menu_no.jpg) no-repeat;
+            color: #cf9764;
+            height: 1.9em;
+            padding-left: 1.5em;
+            padding-right: 0.5em;
+            line-height: 1.6;
+            &:hover {
+                border: none !important;
+                background: url(/static/shop/images/menu_on.jpg) no-repeat;
+            }
+        }
+
+
+        @media screen and (min-width: 319px) and (max-width: 479px) {
+            a {
+                width: 10%;
+            }
+        }
+
+        @media screen and (min-width: 480px) and (max-width: 909px) {
+            a {
+                width: 3.5em;
+            }
+        }
+
+
+        @media screen and (min-width: 910px){
+            a {
+                width: 5.5em;
+            }
+        }
+
+    }
+
+    #mf {
+        width: 100%;
+        display: inline-block;
+        address {
+            float: left;
+        }
+        em {
+            float: right;
+        }
+    }
+
+    #ms {
+        width: 100%;
+        display: inline-block;
+        min-height: 24em;
+        padding-bottom: 2em;
+        font-size: 0.75em;
+
+        >p {
+            text-indent: @rem15;
+            padding-bottom: 0.25em;
+        }
+
+        >img {
+            width: 100%;
+            height: 100%;
+        }
+
+        ol#pinBox {
+            width: 100%;
+            float: left;
+
+            .item {
+                width: 100%;
+                float: left;
+                margin-bottom: 1em;
+                @em375: 37.5em;
+
+                @media screen and (max-width: 629px) {
+                    .styp{
+                        width: 100%;
+                        margin-bottom: 0.375em;
+                    }
+
+                }
+                @media screen and (min-width: 630px) and (max-width: 819px) {
+                    .styp{
+                        width: @em375;
+                        margin-bottom: 0.375em;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                    .side{
+                        width: 36.375em;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                }
+
+                @media screen and (min-width: 820px) and (max-width: 985px) {
+                    .styp{
+                        float: left;
+                        width: @em375;
+                    }
+                    .side{
+                        float: right;
+                        width: 21%;
+                    }
+                }
+                @media screen and (min-width: 886px) and (max-width: 909px) {
+                    .styp{
+                        float: left;
+                        width: @em375;
+                    }
+                    .side{
+                        float: right;
+                        width: 27%;
+                    }
+                }
+                @media screen and (min-width: 910px){
+                    .styp{
+                        float: left;
+                        width: @em375;
+                    }
+                    .side{
+                        float: right;
+                        width: 29.5%;
+                    }
+                }
+
+                .styp {
+                    height: 28.125em;
+                }
+
+                .side {
+                    background: #FFFFFF;
+                    padding: 0.5em;
+                    border-radius: 0.25em;
+                    border: 0.1em solid #cc9866;
+                    h2 {
+                        padding-bottom: 0.25em;
+                        a {
+                            font-size: 1em;
+                            color: #cf9764;
+                        }
+                    }
+                    p {
+                        width: 100%;
+                        color: #999;
+                        text-indent: @rem15;
+                    }
+                    .pinInfo {
+                        color: #999;
+                        width: 100%;
+                        padding: 0.5em 0;
+                        div {
+                            background: url(/static/images/photoDes.png) no-repeat;
+                            padding-left: 1.5em;
+                            margin-left: 0.5em;
+                            line-height: 1.1em;
+                            font-size: 0.75em;
+                        }
+                        .sales {
+                            background-position: 0 -113px;
+                        }
+                        .like {
+                            background-position: 0 -142px
+                        }
+                    }
+
+                    nav {
+                        width: 100%;
+                        line-height: 1.8;
+                        text-decoration: none;
+                        a {
+
+                            margin: 0 0.3125em;
+                        }
+                    }
+                    .button {
+                        width: 100%;
+                        margin-top: 1.5em;
+                         a {
+                            margin: 0.5em;
+                        }
+                    }
+
+
+                }
+            }
+        }
+
+        #bner {
+            width: 100%;
+            height: 530px;
+            padding-bottom: 20px;
+            float: left;
+        }
+        >menu {
+            width: 15%;
+            float: left;
+            font-size: 0.875em;
+            padding-bottom: 2em;
+            li {
+                padding: 0 2em 0 0.5em;
+                a {
+                    line-height: 2;
+                }
+            }
+        }
+        >section, >article {
+            @media screen and (max-width: 629px) {
+                width: 100%;
+                text-align: -webkit-center;
+
+            }
+            @media screen and (min-width: 630px) {
+                width: 85%;
+                float: right;
+                form {
+                    float: left;
+                    padding: 0 2em;
+                }
+            }
+        }
+
+        >section {
+
+        }
+        >article {
+            h3 {
+                text-indent: @rem15;
+                line-height: 2em;
+            }
+            p {
+                text-indent: @rem15;
+            }
+        }
+    }
+}*/
