修正  - 前台前端模板稍微修改
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/article/templates/article.htm
+++ b/article/templates/article.htm
@@ -1,5 +1,9 @@
 {% extends "shop.base.htm" %}
 
+{% if article.title %}
+{% block title %}{{ article.title }}{% endblock %}
+{% endif %}
+
 {% block section %}
         <menu id="sidebar">
 {% for i in alists %}
