--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -49,6 +49,12 @@
             <input type="submit" name="submit" value="确认" class="btn btnbr" />
         </center>
     </form>
+    <p>&nbsp;</p>
+    <strong>小提示：</strong>
+    <p>蓝圈内为免费配送范围，超出免费配送范围须加收10元，收费配送范围为红圈以内蓝圈以外。</p>
+    <p>&nbsp;</p>
+    <img src="{{ STATIC_URL }}images/delivery_areas.jpg" />
+    <p>&nbsp;</p>
 {% endblock %}
 
 
