--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -76,7 +76,7 @@
       <address>
         <a href="{% url 'article:article' 'about' %}">关于31客</a>
       </address>
-      <em>Tel：0771-5676920 0771-5676753</em>
+      <em><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/ico_tel.png"></a><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/qq_logo.png"><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/weixin_logo.png"></a><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/weibo_logo.png"></a></em>
     </footer>
   <!--[if IE 6]>
       <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
@@ -98,7 +98,6 @@
             });
 
             {% block javascript %}{% endblock %}
-
 
             $('section').sloadimg().loadnow(); //异步加载图片
         });
