--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -76,7 +76,7 @@
       <address>
         <a href="{% url 'article:article' 'about' %}">关于31客</a>
       </address>
-      <em><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/ico_tel.png"></a><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/qq_logo.png"><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/weixin_logo.png"></a><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/weibo_logo.png"></a></em>
+      <em><a href="{% url 'tasting:tasting'  %}" title="试吃"><img src="{{ STATIC_URL }}images/f0f5.png"></a><a href="{% url 'article:article' 'contact' %}" title="客服电话"><img src="{{ STATIC_URL }}images/ico_tel.png"></a><a href="{% url 'article:article' 'contact' %}"><img src="{{ STATIC_URL }}images/qq_logo.png" title="QQ客服"><a href="{% url 'article:article' 'contact' %}" title="微信"><img src="{{ STATIC_URL }}images/weixin_logo.png"></a><a href="{% url 'article:article' 'contact' %}" title="微博"><img src="{{ STATIC_URL }}images/weibo_logo.png"></a></em>
     </footer>
   <!--[if IE 6]>
       <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
