修正  - tasting models 修正
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/tasting/templates/tasting.htm
+++ b/tasting/templates/tasting.htm
@@ -4,34 +4,12 @@
 <section>
 <form action="{% url 'tasting:tastsave' %}" method="POST" name="checkout" id="checkout">
         <table width="100%" id="tasting">
-            <tr>
-                <td align="right" width="100px">{{ frm.company.label }}：</td>
-                <td>{{ frm.company }}</td>
+         {% for i in frm %}
+             <tr>
+                <td align="right" width="100px">{{ i.label }}：</td>
+                <td>{{ i }}</td>
             </tr>
-            <tr>
-                <td align="right">{{ frm.address.label }}：</td>
-                <td>{{ frm.address }}</td>
-            </tr>
-            <tr>
-                <td align="right">{{ frm.department.label }}：</td>
-                <td>{{ frm.department }}</td>
-            </tr>
-            <tr>
-                <td align="right">{{ frm.contact.label }}：</td>
-                <td>{{ frm.contact }}</td>
-            </tr>
-            <tr>
-                <td align="right">{{ frm.tel.label }}：</td>
-                <td>{{ frm.tel }}</td>
-            </tr>
-            <tr>
-                <td align="right">{{ frm.time.label }}：</td>
-                <td>{{ frm.time }}</td>
-            </tr>
-            <tr>
-                <td align="right">{{ frm.scale.label }}：</td>
-                <td>{{ frm.scale }}</td>
-            </tr>
+         {% endfor %}
         </table>
         <center>
             {% csrf_token %}
