--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -5,7 +5,7 @@
             <form action="{% url 'account:login' %}" method="POST">
             <table>
                 <tr>
-                    <td colspan="2">用户登录</td>
+                    <td colspan="2">登录</td>
                 </tr>
 {% for i in frm %}
                 <tr>
@@ -31,7 +31,7 @@
             {% csrf_token %}
             <table>
                 <tr>
-                    <td colspan="2">用户注册</td>
+                    <td colspan="2">注册</td>
                 </tr>
 {% for i in nfrm %}
                 <tr>
