修正  - 关闭消息推送  - 试吃模型修正
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -286,6 +286,7 @@ body {
         display: inline-block;
         address {
             float: left;
+            font-weight: bold;
         }
         >em {
             float: right;
