--- a/shop/templates/shop.base.htm
+++ b/shop/templates/shop.base.htm
@@ -78,7 +78,7 @@
       </address>
       <em>
       <ul>
-        <li><a href="{% url 'tasting:tasting'  %}" title="试吃"><img src="{{ STATIC_URL }}images/f0f5.png"></a></li>
+        <li><a href="{% url 'tasting:tasting'  %}" title="免费品尝"><img src="{{ STATIC_URL }}images/f0f5.png"></a></li>
         <li>
           <a href="{% url 'article:article' 'contact' %}" title="客服电话"><img src="{{ STATIC_URL }}images/ico_tel.png" title="客服电话"></a>
           <div class="dico tel">
