--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -287,6 +287,9 @@ body {
         address {
             float: left;
             font-weight: bold;
+            >a{
+                font-size: 1rem;
+            }
         }
         >em {
             float: right;
