--- a/inventory/templates/inventorylist.htm
+++ b/inventory/templates/inventorylist.htm
@@ -5,17 +5,29 @@
           <tr>
             <th>名称</th>
             <th>规格</th>
+            <th>厂房</th>
             <th>操作</th>
           </tr>
 {% for i in items %}
-          <tr align="center" class="tr_border_top_black">
+          <tr align="center" class="tr_border_top_rare">
             <td>{{ i.name }}</td>
-            <td colspan="2">&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
 {% for ii in i.itemspec_set.all %}
-          <tr align="center">
+          <tr align="center" class="tr_border_top_black">
             <td>&nbsp;</td>
             <td>{{ ii.spec.value }}</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr align="center">
+            <td colspan="2">&nbsp;</td>
+            <td>南宁</td>
+            <td><a href="{% url 'inventory:cOnlInv' ii.id %}"><img src="{{ STATIC_URL }}images/{% if ii.invpro.onl %}yes{% else %}no{% endif %}.gif" /></a></td>
+          </tr>
+          <tr align="center">
+            <td colspan="2">&nbsp;</td>
+            <td>长沙</td>
             <td><a href="{% url 'inventory:cOnlInv' ii.id %}"><img src="{{ STATIC_URL }}images/{% if ii.invpro.onl %}yes{% else %}no{% endif %}.gif" /></a></td>
           </tr>
 {% endfor %}
